Start fix for Nav on mobile

--- a/assets/css/4-pages/_page-home.sass
+++ b/assets/css/4-pages/_page-home.sass
@@ -64,15 +64,6 @@ header
       &:visited
         color: $silver
 
-  @media (max-width: 740px)
-    h1
-      font-size: 7em
-
-  @media (max-width: 640px)
-    h1
-      font-size: 5em
-
-
 .hamburger
   background: black
   border: 1px solid
@@ -127,5 +118,47 @@ header
 
   &.hidden
     position: relative
-    right: -900px
+    right: -910px
     transition: 0.3s ease
+
+@media (max-width: 960px)
+  header
+
+    .button
+      border-radius: 0
+
+    nav
+      width: 100%
+      margin-left: 60px
+
+    .nav-items
+      display: flex
+      flex-direction: column
+      margin:
+        right: auto
+        left:  60px
+
+      position: absolute
+      right: 0
+      padding-inline-start: 0
+      padding: 0
+      max-width: 840px
+
+
+@media (max-width: 740px)
+  header
+
+    h1
+      font-size: 7em
+
+    h4
+      font-size: 2em
+
+@media (max-width: 640px)
+  header
+
+    h1
+      font-size: 5em
+
+    h4
+      font-size: 1.5em
